fix z-index for subscribe on mobile

--- a/src/sass/modules/_subscribe.scss
+++ b/src/sass/modules/_subscribe.scss
@@ -1,10 +1,4 @@
 .subscribe {
-    position: relative;
-    z-index: 5;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    top: 0;
     margin: auto;
     padding: 20px;
     @include randomBackground();
@@ -12,7 +6,12 @@
 
     @include mq(desktop) {
         position: fixed;
+        z-index: 5;
         opacity: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        top: 0;
         pointer-events: none;
         height: 260px;
         width: 480px;
